--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,22 @@
-<div class="container" appDnd (fileDropped)="onFileDropped($event)">
-  <input
-    type="file"
-    #fileDropRef
-    id="fileDropRef"
-    multiple
-    (change)="fileBrowseHandler($event.target.files)"
-  />
-  <h3>Escolha ou arraste um arquivo para aqui</h3>
-  <label for="fileDropRef">Escolher</label>
+<div
+  class="container cor-secundaria d-flex"
+  appDnd
+  (fileDropped)="onFileDropped($event)"
+>
+  <div>
+    <input
+      type="file"
+      #fileDropRef
+      id="fileDropRef"
+      multiple
+      (change)="fileBrowseHandler($event.target.files)"
+    />
+    <h3>
+      <b class="cor-primaria">Escolha</b> ou
+      <b class="cor-primaria">arraste um arquivo</b> para aqui
+    </h3>
+  </div>
+  <div><label class="escolher-btn" for="fileDropRef">Escolher</label></div>
 </div>
 <div class="files-list">
   <div class="single-file" *ngFor="let file of files; let i = index">
