--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,32 @@
+.d-flex {
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+}
+
+.cor-primaria {
+  color: #347d6b;
+}
+
+.escolher-btn {
+  cursor: pointer;
+}
+
+.cor-secundaria {
+  background-color: #e9ecef;
+}
+
 .container {
-  width: 450px;
-  height: 200px;
   padding: 2rem;
   text-align: center;
   border: dashed 3px #347d6b;
-  position: relative;
   margin: 0 auto;
-
   input {
-    opacity: 0;
-    position: absolute;
+    display: none;
     z-index: 2;
     width: 100%;
-    height: 100%;
+    height: 50%;
     top: 0;
     left: 0;
   }
@@ -23,13 +37,14 @@
     height: 44px;
     border-radius: 5px;
     background-color: #347d6b;
-    padding: 8px 16px;
+    padding: 16px 16px;
   }
 
   h3 {
     font-size: 20px;
     font-weight: 600;
     color: #38424c;
+    text-align: center;
   }
 }
 
